# microservice-ia

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build-sentenx-push-tag-shared.yaml  ci.yaml
app/: celery.py  config.py  main.py  rerank.py  util.py
app/downloaders/: __init__.py  exceptions.py
app/downloaders/s3/: __init__.py  file_downloader.py
app/embedders/: embedders.py
app/handlers/: __init__.py  authorizations.py  content_bases.py  interface.py  nexus.py  products.py
app/indexer/: __init__.py  content_bases.py  indexer_file_manager.py  interface.py  products.py
app/loaders/: __init__.py  loaders.py
app/store/: __init__.py  elasticsearch_vector_store.py  elasticsearch_vector_store_gpt.py  interface.py
app/tests/: test_config.py  test_document_loader.py  test_elasticsearch_vector_store.py  test_products_handler.py  test_products_indexer.py  test_text_splitter.py
app/text_splitters/: __init__.py  text_splitters.py
